# lucent

./: .gitignore  README.md  pyproject.toml
seed/code-understanding/: SKILL.md
seed/code-understanding/scripts/: observe.py  run.sh  setup.sh
seed/understand/: renderer.py
src/lucent/: __init__.py  _version.py  assess.py  atoms.py  cli.py  graph.py  ledger.py  lens.py  observe.py  reachability.py  report.py  run.py  schema.sql  structure.py
src/lucent/deep/: __init__.py  joern.py
src/lucent/review/: __init__.py  adjudicate.py  agent.py  config.py  schemas.py  synth.py
src/lucent/signatures/: __init__.py  python-idioms.json
tests/: test_joern_provider.py  test_lucent.py
